--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <h2>about us</h2>
           <br>
     
-       <p> Puthalath Designs is a well-organized and fully-fledged Architecture and interior design company in Kasaragod offering comprehensive Architecture and interior design solutions. We make use of the latest design technologies and work with a commitment to bring out the best possible result. Our well-planned Architecture and interior designs process include space planning, layout plan 2D drawings, 3D views, electrical & plumbing layout planning, Custom made furniture and revisions towards the final result to the complete satisfaction of the client. Founded in 2017, Puthalath Associates has built a versatile crew of architects, interior designers, draftsmen, 3D visualizers, site supervisors, administrators, project managers, skilled and trained workers.
+       <p> Puthalath Designs is a well-organized and fully-fledged Architecture and interior design company in Kasaragod offering comprehensive Architecture and interior design solutions. We make use of the latest design technologies and work with a commitment to bring out the best possible result. Our well-planned Architecture and interior designs process include space planning, layout plan 2D drawings, 3D views, electrical & plumbing layout planning, Custom made furniture and revisions towards the final result to the complete satisfaction of the client. Founded in 2017, Puthalath Designs has built a versatile crew of architects, interior designers, draftsmen, 3D visualizers, site supervisors, administrators, project managers, skilled and trained workers.
       </p>  </div>
         <img src="image/IMG_6895 (1).jpg" width="250" height="250" alt="">
   
